# transcender

./: .gitignore  CITATION.cff  LICENSE  PAPER_STATUS.md  README.md  REPO_MAP.md  REPRODUCIBILITY.md  RESULTS_INDEX.md  pyproject.toml  requirements.txt
artifacts/dense_followup/: llama31_8b_exit_sweep.json  llama31_8b_exit_sweep_summary.csv  transcender_track_c_gemma_advanced_probe_L20_results.json  transcender_track_c_llama3_8b_cache_aware_probe.json  transcender_track_c_llama3_8b_family_sensitive_probe.json  transcender_track_c_llama3_8b_results.json  transcender_track_c_mistral7b_results.json
artifacts/gpt2_poc/: baseline_equivalence_debug.json  transcender_blend_strategy_benchmark.json  transcender_quality_calibration.json  transcender_v02_benchmark.json
artifacts/recon/: recon_llama3_8b.json  recon_mistral7b.json
artifacts/track_a/: hard_exit_ablation.json  hard_exit_ablation_post_fix.json  postfix_dynamic_benchmark.json  (+7 more)
docs/: BENCHMARK_SUMMARY.md  NEXT_EXPERIMENTS.md  ROADMAP.md  TRACK_B_RERUN_NOTE.md  TRACK_C_RERUN_NOTE.md  TRACK_MATCHING_PLAN.md  chapter3_subspace_paradox.md  chapter4_logit_blend_solution.md  karma_stage_b_summary.md
models/: son_router_l2_cal.pt  son_router_l6_c03.pt  son_router_l6_cal.pt  son_router_trained.pt
paper/: Transcender_Final_Whitepaper_v1.md  Transcender_Final_Whitepaper_v2.md  Transcender_Whitepaper_v1.md  main.tex  references.bib
scripts/: export_track_comparison_table.py
tests/: test_imports.py  test_model.py  test_router.py
transcender/: __init__.py  model.py  policies.py  router.py
(+58 files in other folders)
