[project]
name = "transcender"
version = "0.1.0"
description = "Per-token depth-axis routing for transformer language models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0", "seaborn>=0.12.0", "scikit-learn>=1.3.0"]
mlx = ["mlx>=0.16.0", "mlx-lm>=0.16.0"]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
dev = ["pytest>=7.0.0"]
all = ["transcender[viz,server,dev]"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["transcender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
